force-app/main/default/objects/Prospect__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Owner</fullName>
            </value>
            <value>
                <fullName>Standard Investor</fullName>
            </value>
            <value>
                <fullName>REO</fullName>
            </value>
            <value>
                <fullName>Short Sale</fullName>
            </value>
            <value>
                <fullName>E-Bid</fullName>
            </value>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>Standard Sale</fullName>
            </value>
            <value>
                <fullName>iBuyer</fullName>
            </value>
            <value>
                <fullName>Mls Listings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>