force-app/main/default/objects/Prospect__c/fields/Seller_Requesting_LeaseBack__c.field-meta.xml
<CustomField>
    <fullName>Seller_Requesting_LeaseBack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seller Requesting LeaseBack</label>
    <type>Checkbox</type>
</CustomField>