force-app/main/default/objects/Prospect__c/fields/Solar_Panel_Comments__c.field-meta.xml
<CustomField>
    <fullName>Solar_Panel_Comments__c</fullName>
    <label>Solar Panel Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>