force-app/main/default/objects/Prospect__c/fields/Stories__c.field-meta.xml
<CustomField>
    <fullName>Stories__c</fullName>
    <label>Stories</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>