force-app/main/default/objects/Prospect__c/fields/Sub_Market__c.field-meta.xml
<CustomField>
    <fullName>Sub_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Market</label>
    <referenceTo>Sub_Market__c</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>