force-app/main/default/objects/Prospect__c/fields/Subdivision__c.field-meta.xml
<CustomField>
    <fullName>Subdivision__c</fullName>
    <formula>Address_Record__r.Subdivision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subdivision</label>
    <type>Text</type>
</CustomField>