force-app/main/default/objects/Prospect__c/fields/Submission_Process__c.field-meta.xml
<CustomField>
    <fullName>Submission_Process__c</fullName>
    <label>Submission Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>