force-app/main/default/objects/Prospect__c/fields/Supervisor_Director__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor/Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>