force-app/main/default/objects/Prospect__c/fields/Swimming_Pool__c.field-meta.xml
<CustomField>
    <fullName>Swimming_Pool__c</fullName>
    <label>Swimming Pool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>