force-app/main/default/objects/Prospect__c/fields/Tenant_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Tenant_in_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tenant in Place</label>
    <type>Checkbox</type>
</CustomField>