force-app/main/default/objects/Prospect__c/fields/Test_Create__c.field-meta.xml
<CustomField>
    <fullName>Test_Create__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Create</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>