force-app/main/default/objects/Prospect__c/fields/test_formlua_field_2__c.field-meta.xml
<CustomField>
    <fullName>test_formlua_field_2__c</fullName>
    <formula>Final_Offer__c+Initial_Rehab_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test formlua field 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>