force-app/main/default/objects/Prospect__c/fields/Test_Formula_3__c.field-meta.xml
<CustomField>
    <fullName>Test_Formula_3__c</fullName>
    <formula>Final_Offer__c/Initial_Rehab_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Formula 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>