force-app/main/default/objects/Prospect__c/fields/Test_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Formula_Field__c</fullName>
    <formula>Final_Offer__c*2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Formula Field</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>