force-app/main/default/objects/Prospect__c/fields/Tets__c.field-meta.xml
<CustomField>
    <fullName>Tets__c</fullName>
    <formula>42</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>