force-app/main/default/objects/Prospect__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Repair_Maintenance__c + HOA_Utiltiies__c + Property_Insurance__c + Leasing_Fee__c + Property_Management_Fee__c + Property_Taxes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>