force-app/main/default/objects/Prospect__c/fields/Total_Invested__c.field-meta.xml
<CustomField>
    <fullName>Total_Invested__c</fullName>
    <formula>Purchase_Price__c + Capex__c + Acquisition_Fees__c*Purchase_Price__c + Closing_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>