force-app/main/default/objects/Prospect__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <label>Unit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>