force-app/main/default/objects/Prospect__c/fields/Year_Built_Score__c.field-meta.xml
<CustomField>
    <fullName>Year_Built_Score__c</fullName>
    <formula>IF(AND(VALUE(Year_Built__c)&gt;=1979,VALUE(Year_Built__c)&lt;=1989),0.63,
IF(AND(VALUE(Year_Built__c)&gt;=1990,VALUE(Year_Built__c)&lt;=1999),1.25,
IF(AND(VALUE(Year_Built__c)&gt;=2000,VALUE(Year_Built__c)&lt;=2009),1.88,2.50)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Built Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>