force-app/main/default/objects/Prospect__c/fields/Zillow_Listing_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Zillow_Listing_Transaction_Status__c</fullName>
    <label>Zillow Listing Transaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>