force-app/main/default/objects/Prospect__c/fields/Zillow_Rents__c.field-meta.xml
<CustomField>
    <fullName>Zillow_Rents__c</fullName>
    <label>Zillow Rents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>