force-app/main/default/objects/Prospect__c/fields/Zillow_Website_Link__c.field-meta.xml
<CustomField>
    <fullName>Zillow_Website_Link__c</fullName>
    <label>Zillow Website Link</label>
    <type>Url</type>
</CustomField>