force-app/main/default/objects/Prospect__c/recordTypes/Propsect_Analyst_Broker.recordType-meta.xml
<RecordType>
    <fullName>Propsect_Analyst_Broker</fullName>
    <active>true</active>
    <label>Propsect - Analyst(Broker)</label>
</RecordType>