force-app/main/default/objects/Prospect__c/recordTypes/Prospect_Broker.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Broker</fullName>
    <active>true</active>
    <label>Prospect - Broker</label>
</RecordType>