force-app/main/default/objects/Prospect__c/recordTypes/Prospect_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Read_Only</fullName>
    <active>true</active>
    <label>Prospect - Read Only</label>
</RecordType>