force-app/main/default/objects/Prospect__c/recordTypes/Prospect_Read_Write.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Read_Write</fullName>
    <active>true</active>
    <label>Prospect - Read/Write</label>
</RecordType>